# git-publish-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  gitpublish.toml.example
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  HOOKS.md  INDEX.md  PRERELEASE.md
docs/analysis/: CODEBASE_ANALYSIS.md  CODE_FLOW_DIAGRAMS.md  QUICK_REFERENCE.md
docs/plans/: 2025-01-22-cli-ux-optimization-design.md  2025-01-22-cli-ux-optimization-implementation.md  2025-01-23-comprehensive-testing.md  2025-01-23-hooks-system.md  2025-01-23-task5-main-orchestration.md  2026-01-22-git-publish-cli-design.md  2026-01-22-remote-configuration-and-cli-flags.md  2026-01-23-git-publish-refactoring-implementation.md  2026-01-23-refactoring-gap-analysis-and-fixes.md  2026-05-10-tag-selection-choice-ui.md
src/: boundary.rs  config.rs  conventional.rs  error.rs  git_ops.rs  lib.rs  main.rs  ui.rs  version.rs
src/analyzer/: mod.rs  version_analyzer.rs
src/cli/: mod.rs  orchestration.rs
src/domain/: branch.rs  commit.rs  mod.rs  prerelease.rs  tag.rs  version.rs
src/git/: mock.rs  mod.rs  repository.rs
src/hooks/: executor.rs  lifecycle.rs  mod.rs
src/ui/: formatter.rs  mod.rs
tests/: boundary_test.rs  cli_orchestration_test.rs  config_test.rs  integration_test.rs
tests/fixtures/: config_with_behavior.toml
