[package]
name = "git-publish"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
git2 = "0.18"
semver = "1.0"
console = "0.15"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"